<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.tendercut.contact_us.ContactUsFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">


        <com.tendercut.customview.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aboutus_content_tv"
            android:text="@string/lorem_ipsum_main"
            android:textSize="14sp"
            android:textColor="@color/colorBlackLight"
            android:layout_marginTop="30dp"
            customfont:tv_font_name="@string/ubuntu_regular"/>

        <com.tendercut.customview.MyButton
            android:id="@+id/email_us_btn"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/white_button_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/email_us"
            android:textColor="@color/colorPrimary"
            customfont:tv_font_name="@string/ubuntu_medium" />

        <com.tendercut.customview.MyButton
            android:id="@+id/call_us_btn"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/email_us_btn"
            android:layout_marginBottom="20dp"
            android:background="@drawable/white_button_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/call_us"
            android:textColor="@color/colorPrimary"
            customfont:tv_font_name="@string/ubuntu_medium" />
    </RelativeLayout>
</RelativeLayout>
