<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.tendercut.about_us.AboutUsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.tendercut.customview.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aboutus_content_tv"
            android:text="@string/lorem_ipsum_main"
            android:textSize="14sp"
            android:textColor="@color/colorBlackLight"
            android:layout_marginTop="30dp"
            customfont:tv_font_name="@string/ubuntu_regular"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/privacy_rl"
        android:background="@drawable/ripple_drawable_normal"
        android:clickable="true"
        android:layout_alignParentBottom="true">

        <com.tendercut.customview.MyTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            customfont:tv_font_name="@string/ubuntu_medium"/>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/terms_rl"
        android:layout_above="@+id/privacy_rl">

        <com.tendercut.customview.MyTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/terms_use"
            android:gravity="center|left"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            customfont:tv_font_name="@string/ubuntu_medium"/>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>



</RelativeLayout>
