<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/colorWhite"
    tools:context="com.tendercut.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/iv_dp_default" />

    <com.tendercut.customview.MyEditText
        android:id="@+id/first_name_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:layout_below="@+id/profile_image"
        android:hint="@string/name"
        android:inputType="textPersonName|textNoSuggestions|textCapWords"
        android:longClickable="false"
        android:maxLines="1"
        android:textColor="@color/colorBlackRegular"
        android:textColorHint="@color/colorBlackLight"
        android:textSize="14sp"
        customfont:et_font_name="@string/ubuntu_regular" />

    <com.tendercut.customview.MyEditText
        android:id="@+id/last_name_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/first_name_et"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/name_last"
        android:inputType="textPersonName|textNoSuggestions|textCapWords"
        android:longClickable="false"
        android:maxLines="1"
        android:textColor="@color/colorBlackRegular"
        android:textColorHint="@color/colorBlackLight"
        android:textSize="14sp"
        customfont:et_font_name="@string/ubuntu_regular" />

    <com.tendercut.customview.MyEditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/last_name_et"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="Email"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:longClickable="false"
        android:maxLines="1"
        android:textColor="@color/colorBlackRegular"
        android:textColorHint="@color/colorBlackLight"
        android:textSize="14sp"
        customfont:et_font_name="@string/ubuntu_regular" />

    <com.tendercut.customview.MyEditText
        android:id="@+id/phone_num_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email_et"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/phone_et"
        android:inputType="phone|textNoSuggestions"
        android:longClickable="false"
        android:maxLines="1"
        android:maxLength="10"
        android:textColor="@color/colorBlackRegular"
        android:textColorHint="@color/colorBlackLight"
        android:textSize="14sp"
        customfont:et_font_name="@string/ubuntu_regular" />

    <com.tendercut.customview.MyButton
        android:id="@+id/edit_btn"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_below="@+id/phone_num_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/white_button_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="Edit"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        customfont:tv_font_name="@string/ubuntu_medium" />

</RelativeLayout>
