<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.tendercut.login.LoginActivity">
    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/iv_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_rl"
        android:padding="16dp">


            <com.tendercut.widgets.UbuntuRegularEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:longClickable="false"
                android:maxLines="1"
                android:layout_marginTop="36dp"
                android:textColorHint="@color/colorBlackLight"
                android:textSize="14sp"
                android:textColor="@color/colorBlackRegular"
                android:background="@drawable/edittext_bg" />
            <com.tendercut.widgets.UbuntuRegularEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/colorBlackLight"
                android:textSize="14sp"
                android:textColor="@color/colorBlackRegular"
                android:inputType="textNoSuggestions|textPassword"
                android:maxLines="1"
                android:longClickable="false"
                android:background="@drawable/edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/email_et"/>

        <CheckBox
            android:id="@+id/remember_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/remeber_me"
            android:textSize="14sp"
            android:layout_below="@+id/password_et"
            android:layout_marginTop="31dp"/>
      <!--  <com.tendercut.widgets.UbuntuMedumTextView
            android:id="@+id/remember_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/password_til"
            android:layout_toRightOf="@id/remember_cb"
            android:layout_marginLeft="5dp"
            android:text="@string/remeber_me"
            android:textSize="14sp"
            android:textColor="@color/colorBlackRegular"/>-->
        <com.tendercut.widgets.UbuntuMedumTextView
            android:id="@+id/forgot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_et"
            android:layout_marginTop="35dp"
            android:layout_alignParentRight="true"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:textSize="14sp"/>
        <com.tendercut.widgets.UbuntuMedumTextView
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:id="@+id/login_btn_tv"
            android:layout_below="@+id/forgot_tv"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_bg"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:clickable="true"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>
        <RelativeLayout
            android:id="@+id/or_rl"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_marginTop="36dp"
            android:layout_below="@id/login_btn_tv">
        <com.tendercut.widgets.UbuntuMedumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/or_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/or"
            android:textColor="@color/colorBlackLight"
            android:textSize="14sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorBlackLight"
            android:layout_toLeftOf="@+id/or_tv"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorBlackLight"
            android:layout_toRightOf="@+id/or_tv"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/social_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/or_rl"
            android:layout_centerHorizontal="true">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/google_btn"
            android:background="@drawable/iv_google"
            android:layout_marginRight="8dp"
            android:layout_marginTop="36dp"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/facebook_btn"
            android:background="@drawable/iv_facebook"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="36dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/social_ll"
            android:layout_marginTop="36dp"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <com.tendercut.widgets.UbuntuMedumTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_acc_tv"
                android:text="@string/create_an_account"
                android:textSize="14sp"
                android:textColor="@color/colorBlackRegular"/>
            <com.tendercut.widgets.UbuntuMedumTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up"
                android:text="@string/sign_up"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
