<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:padding="16dp"
    tools:context="com.tendercut.change_password.ChangePasswordFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.tendercut.customview.MyEditText
        android:id="@+id/current_password_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="Current Password"
        android:inputType="textPassword|textNoSuggestions"
        android:longClickable="false"
        android:maxLines="1"
        android:maxLength="10"
        android:textColor="@color/colorBlackRegular"
        android:textColorHint="@color/colorBlackLight"
        android:textSize="14sp"
        customfont:et_font_name="@string/ubuntu_regular" />
    <com.tendercut.customview.MyEditText
        android:id="@+id/new_password_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/current_password_et"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="New Password"
        android:inputType="textPassword|textNoSuggestions"
        android:longClickable="false"
        android:maxLines="1"
        android:maxLength="10"
        android:textColor="@color/colorBlackRegular"
        android:textColorHint="@color/colorBlackLight"
        android:textSize="14sp"
        customfont:et_font_name="@string/ubuntu_regular" />
    <com.tendercut.customview.MyEditText
        android:id="@+id/confirm_password_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/new_password_et"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="Confirm Password"
        android:inputType="textPassword|textNoSuggestions"
        android:longClickable="false"
        android:maxLines="1"
        android:maxLength="10"
        android:textColor="@color/colorBlackRegular"
        android:textColorHint="@color/colorBlackLight"
        android:textSize="14sp"
        customfont:et_font_name="@string/ubuntu_regular" />

    <com.tendercut.customview.MyButton
        android:id="@+id/done_btn"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_below="@+id/confirm_password_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/white_button_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        customfont:tv_font_name="@string/ubuntu_medium" />

</RelativeLayout>
